# nano-diffusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  config_debug.yaml  config_full.yaml  train.yaml
diffusion/: __init__.py  config.py  ema.py  model.py  modules.py  noise_schedulers.py  samplers.py  trainer.py  utils.py
docker/: Dockerfile  config.sh  docker-compose.yml  setup.sh
notebooks/: diffusion.ipynb  model_architecture.ipynb  model_inference.ipynb  noise_scheduling.ipynb  utils.py
preprocessing/: encode_cifar10.py  normalize_cifar10.py
tests/: test_modules.py  test_noise_schedulers_and_samplers.py  test_sanity.py  test_trainer.py
train/: train.py
